# Embedded-Poker-Server

./: CMakeLists.txt  Makefile  README.md  csv.c  csv.h  firmware  hal.c  hal.h  main.c  mc_time.c  mc_time.h  mongoose.h  mongoose_config.h  mongoose_fs.c  mongoose_glue.c  mongoose_glue.h  mongoose_impl.c  mongoose_wizard.json  poker.c  poker.h  time.c  time.h
poker_files/: net_data.csv  test.csv
